    repo.
  * importfeed: Fix feed download when curl is used.
  * importfeed: Error out when passed a non-url.
  * webapp: When adding another local repository, and combining it
    with the current repository, the new repository's remote path
    was set to "." rather than the path to the current repository.
    This was a reversion caused by the relative path changes in 5.20150113.

 -- Joey Hess <id@joeyh.name>  Thu, 09 Apr 2015 15:06:38 -0400

git-annex (5.20150406.1) unstable; urgency=medium

  * Fixes a bug in the last release that caused rsync and possibly
    other commands to hang at the end of a file transfer.
    (--quiet is back to not blocking progress displays until
    that code can be fixed properly.)

 -- Joey Hess <id@joeyh.name>  Mon, 06 Apr 2015 17:13:13 -0400

git-annex (5.20150406) unstable; urgency=medium

  * Prevent git-ls-files from double-expanding wildcards when an
    unexpanded wildcard is passed to a git-annex command like add or find.
  * Fix make build target. Thanks, Justin Geibel.
  * Fix GETURLS in external special remote protocol to strip
    downloader prefix from logged url info before checking for the
    specified prefix.
  * importfeed: Avoid downloading a redundant item from a feed whose
    guid has been downloaded before, even when the url has changed.
  * importfeed: Always store itemid in metadata; before this was only
    done when annex.genmetadata was set.
  * Relax debian package dependencies to git >= 1:1.8.1 rather
    than needing >= 1:2.0.
  * test: Fix --list-tests
  * addurl --file: When used with a special remote that claims
    urls and checks their contents, don't override the user's provided
    filename with filenames that the special remote suggests. Also,
    don't allow adding the url if the special remote says it contains
    multiple files.
  * import: --deduplicate and --cleanduplicates now output the keys
    corresponding to duplicated files they process.