@@ -22,6 +22,7 @@ import qualified Command.Move
 import qualified Command.Copy
 import qualified Command.Get
 import qualified Command.LookupKey
+import qualified Command.ContentLocation
 import qualified Command.ExamineKey
 import qualified Command.FromKey
 import qualified Command.RegisterUrl
@@ -152,6 +153,7 @@ cmds = concat
 	, Command.Ungroup.cmd
 	, Command.Vicfg.cmd
 	, Command.LookupKey.cmd
+	, Command.ContentLocation.cmd
 	, Command.ExamineKey.cmd
 	, Command.FromKey.cmd
 	, Command.RegisterUrl.cmd
