@@ -1,0 +1,14 @@
+[[!comment format=mdwn
+ username="joey"
+ subject="""comment 3"""
+ date="2015-04-09T19:08:40Z"
+ content="""
+I've added a contentlocation command
+
+I'd expect an external command to not be much slower than using the pipe
+for this. It does not need to spin up any git commands etc to get the
+content location. Also, you can pass it multiple keys to query at one time
+if necessary.
+
+I guess we'll see if this is too slow and can revisit it if so..
+"""]]
