@@ -20,6 +20,7 @@ git-annex (5.20150409) unstable; urgency=medium
     with the current repository, the new repository's remote path
     was set to "." rather than the path to the current repository.
     This was a reversion caused by the relative path changes in 5.20150113.
+  * contentlocationn: New plumbing command.
 
  -- Joey Hess <id@joeyh.name>  Thu, 09 Apr 2015 15:06:38 -0400
 
